@startuml
title 16. UML - Singleton trong Checkout System

skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundCorner 12
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #000000
  ArrowColor #000000
  FontColor #000000
  FontSize 14
  FontStyle bold
}

class CheckoutFacade {
}

class ShippingFeeCalculator {
}

class SiteSettings <<Singleton>> {
}

CheckoutFacade --> SiteSettings
ShippingFeeCalculator --> SiteSettings

@enduml
